crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__conda_pypi_map__test__bogus_mode_fails.snap
---
source: crates/pixi_manifest/src/toml/conda_pypi_map.rs
assertion_line: 376
expression: "expect_parse_failure(r#\"\n            [workspace]\n            channels = []\n            platforms = []\n            conda-pypi-map = { conda-forge = { location = \"m.json\", mapping-mode = \"bogus\" } }\n            \"#)"
---
  × Expected one of 'overlay', 'replace'
   ╭─[pixi.toml:5:85]
 4 │             platforms = []
 5 │             conda-pypi-map = { conda-forge = { location = "m.json", mapping-mode = "bogus" } }
   ·                                                                                     ─────
 6 │
   ╰────
