crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__conda_pypi_map__test__channel_true_fails.snap
---
source: crates/pixi_manifest/src/toml/conda_pypi_map.rs
expression: "expect_parse_failure(r#\"\n            [workspace]\n            channels = []\n            platforms = []\n            conda-pypi-map = { conda-forge = true }\n            \"#)"
---
  × `true` is not supported; use `false` to disable the mapping for this channel, or a string or table to configure it
   ╭─[pixi.toml:5:46]
 4 │             platforms = []
 5 │             conda-pypi-map = { conda-forge = true }
   ·                                              ────
 6 │
   ╰────
