crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__conda_pypi_map__test__empty_entry_table_fails.snap
---
source: crates/pixi_manifest/src/toml/conda_pypi_map.rs
assertion_line: 395
expression: "expect_parse_failure(r#\"\n            [workspace]\n            channels = []\n            platforms = []\n            conda-pypi-map = { conda-forge = {} }\n            \"#)"
---
  × expected at least one of `location`, `mapping`, `mapping-mode` or `same-name-heuristic`
   ╭─[pixi.toml:5:46]
 4 │             platforms = []
 5 │             conda-pypi-map = { conda-forge = {} }
   ·                                              ──
 6 │
   ╰────
