crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__conda_pypi_map__test__empty_map_parses_and_warns.snap
---
source: crates/pixi_manifest/src/toml/conda_pypi_map.rs
expression: "expect_parse_warnings(r#\"\n            [workspace]\n            channels = []\n            platforms = []\n            conda-pypi-map = {}\n            \"#)"
---
  ⚠ `conda-pypi-map = {}` is deprecated
  help: To disable the conda-pypi mapping, write `conda-pypi-map = false` instead.
