crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__conda_pypi_map__test__inline_list_with_non_string_fails.snap
---
source: crates/pixi_manifest/src/toml/conda_pypi_map.rs
expression: "expect_parse_failure(r#\"\n            [workspace]\n            channels = []\n            platforms = []\n            conda-pypi-map = { conda-forge = { mapping = { pytorch = [\"torch\", 1] } } }\n            \"#)"
---
  × expected a string, found integer
   ╭─[pixi.toml:5:80]
 4 │             platforms = []
 5 │             conda-pypi-map = { conda-forge = { mapping = { pytorch = ["torch", 1] } } }
   ·                                                                                ─
 6 │
   ╰────
