crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__conda_pypi_map__test__invalid_ttl_fails.snap
---
source: crates/pixi_manifest/src/toml/conda_pypi_map.rs
expression: "expect_parse_failure(r#\"\n            [workspace]\n            channels = []\n            platforms = []\n            conda-pypi-map = { conda-forge = { location = \"https://example.com/m.json\", cache-ttl = \"bogus\" } }\n            \"#)"
---
  × invalid `cache-ttl` duration: expected number at 0
   ╭─[pixi.toml:5:102]
 4 │             platforms = []
 5 │             conda-pypi-map = { conda-forge = { location = "https://example.com/m.json", cache-ttl = "bogus" } }
   ·                                                                                                      ─────
 6 │
   ╰────
