crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__conda_pypi_map__test__top_level_true_fails.snap
---
source: crates/pixi_manifest/src/toml/conda_pypi_map.rs
expression: "expect_parse_failure(r#\"\n            [workspace]\n            channels = []\n            platforms = []\n            conda-pypi-map = true\n            \"#)"
---
  × `conda-pypi-map = true` is not supported; use `false` to disable the mapping, or a table to configure it
   ╭─[pixi.toml:5:30]
 4 │             platforms = []
 5 │             conda-pypi-map = true
   ·                              ────
 6 │
   ╰────
