crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__conda_pypi_map__test__ttl_without_location_fails.snap
---
source: crates/pixi_manifest/src/toml/conda_pypi_map.rs
expression: "expect_parse_failure(r#\"\n            [workspace]\n            channels = []\n            platforms = []\n            conda-pypi-map = { conda-forge = { mapping = { a = \"b\" }, cache-ttl = \"24h\" } }\n            \"#)"
---
  × `cache-ttl` requires a `location` that is a URL
   ╭─[pixi.toml:5:46]
 4 │             platforms = []
 5 │             conda-pypi-map = { conda-forge = { mapping = { a = "b" }, cache-ttl = "24h" } }
   ·                                              ────────────────────────────────────────────
 6 │
   ╰────
